<!--
  ~ Copyright (c) 2016.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.monigarr.MoniGarrChatDemo.viewholders.MainActivity">
    <item
        android:id="@+id/sign_out_menu"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/fresh_config_menu"
        android:orderInCategory="101"
        android:title="@string/fresh_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/invite_menu"
        android:orderInCategory="102"
        android:title="@string/invite_menu_label" />
        <item
        android:id="@+id/crash_menu"
    android:orderInCategory="103"
    android:title="@string/cause_crash"
    app:showAsAction="never" />
</menu>
