<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.monigarr.MoniGarrChatDemo.viewholders.AddFriendActivity">


    <EditText
        android:id="@+id/etFirstname"
        android:text="@string/hint_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etLastname"
        android:text="@string/hint_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etZipcode"
        android:text="@string/hint_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDob"
        android:text="@string/hint_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonCreate"
        android:text="Add Person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="People"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>