<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etLastname"
        android:text="@string/add_friend"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/etFirstname"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_add_friend"
        android:hint="@string/hint_firstname" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/etLastname"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etFirstname"
        android:hint="@string/hint_lastname" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/etZipcode"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etLastname"
        android:hint="@string/hint_zipcode" />

    <EditText
        android:id="@+id/etDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etZipcode"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/hint_dob"
        android:layout_alignRight="@+id/etZipcode"
        android:layout_alignEnd="@+id/etZipcode"/>

    <Button
        android:id="@+id/btCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etDob"
        android:text="@string/add_friend" />

</RelativeLayout>